--- a/src/@components/common/layout/layout.css
+++ b/src/@components/common/layout/layout.css
@@ -1,11 +1,15 @@
-.container-layout{
-    display: grid;
-    grid-template-columns: minmax(10rem,15%) 1fr;
+.container-fluid {
+	/* Overriding bootstrap styles for container to give full page width*/
+	padding: 0px !important;
+}
+.container-layout {
+	display: grid;
+	grid-template-columns: minmax(10rem, 15%) 1fr;
 }
 
-@media only screen and (max-width:768px){
-    .container-layout{
-        display: grid;
-        grid-template-columns: 100%;
-    }
+@media only screen and (max-width: 991px) {
+	.container-layout {
+		display: grid;
+		grid-template-columns: 100%;
+	}
 }
