--- a/src/@components/common/sidebar/sidebar.css
+++ b/src/@components/common/sidebar/sidebar.css
@@ -1,17 +1,22 @@
-.sidebar{
-    /* background-color: black; */
-    color:purple;
-    /* display:flex; */
-    /* flex-direction: column; */
+.sidebar {
 }
 
-.sidebar-nav{
-    background-color: #343a40;
-    /* display: flex; */
-    flex-direction: column;
-    align-items: flex-start;
+.sidebar-nav {
+	background-color: #343a40;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 }
 
-.sidebar-nav-link{
-    color:white;
+.sidebar-nav-link {
+	color: white;
+}
+
+@media screen and (min-width: 991px) {
+	.sidebar {
+		height: 100vh;
+	}
+	.sidebar-nav {
+		height: 100%;
+	}
 }
