--- a/src/@components/common/user-card/user-card.css
+++ b/src/@components/common/user-card/user-card.css
@@ -1,19 +1,9 @@
-.user-card{
-    display: grid;
-    grid-template-columns: max-content max-content;
-    grid-template-rows: min-content min-content min-content;
-    background-color: var(--dark);
-    color: white;
+.user-card > a {
+	text-decoration: none;
+	color: white;
 }
-.user-img{
-    grid-row: 1/4;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex:1;
-    padding-right: 1rem;
-}
-.user-details{
-    display: flex;
-    justify-content: flex-start;
+
+.user-card > a:hover {
+	text-decoration: none;
+	color: white;
 }
