--- a/src/@components/common/sidebar/sidebar.css
+++ b/src/@components/common/sidebar/sidebar.css
@@ -2,19 +2,18 @@
 }
 
 .sidebar-nav {
-	background-color: #343a40;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 }
 
 .sidebar-nav-link {
-	color: white;
+	color: var(--dark);
 }
 
 @media screen and (min-width: 991px) {
 	.sidebar {
-		height: 100vh;
+		height: calc(100vh - 58px);
 	}
 	.sidebar-nav {
 		height: 100%;
